--- a/index.css
+++ b/index.css
@@ -379,7 +379,14 @@ footer .container{
                             grid-template-columns: repeat(1, 1fr);
                         }
                     }
-                    
+                    @media screen  and (max-width:450px){
+                        .services3 .container {
+                            margin-top: 2em;
+                        }
+                      
+                        hr {
+                            margin-top: 2em;
+                    }}
                     @media screen and (max-width: 368px) {
                         .logo{
                             font-size: 15px;
@@ -392,13 +399,13 @@ footer .container{
                             grid-template-columns: repeat(1, 1fr);
                         }
                         .services3 .container {
-                            margin-top: 5em;
+                            margin-top: 2em;
                         }
                         .services4 .container {
-                            padding-bottom: 10em;
+                            padding-bottom: 2em;
                         }
                         hr {
-                            margin-top: 10em;
+                            margin-top: 2em;
                         }
                         footer .container {
                             margin-top: 1em;
